@@ -14,7 +14,6 @@ import com.csiro.tickets.repository.TicketRepository;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.http.HttpHeaders;
@@ -25,16 +24,24 @@ import org.springframework.stereotype.Component;
 @Component
 public class ExportService {
 
-  @Autowired TicketRepository ticketRepository;
-
-  @Autowired LabelRepository labelRepository;
-
-  @Autowired IterationRepository iterationRepository;
-
-  @Autowired StateRepository stateRepository;
-
   public static final List<String> NON_EXTERNAL_REQUESTERS =
       Arrays.asList("JiraExport", "SAS", "BlackTriangle");
+  final TicketRepository ticketRepository;
+  final LabelRepository labelRepository;
+  final IterationRepository iterationRepository;
+  final StateRepository stateRepository;
+
+  @Autowired
+  public ExportService(
+      TicketRepository ticketRepository,
+      LabelRepository labelRepository,
+      IterationRepository iterationRepository,
+      StateRepository stateRepository) {
+    this.ticketRepository = ticketRepository;
+    this.labelRepository = labelRepository;
+    this.iterationRepository = iterationRepository;
+    this.stateRepository = stateRepository;
+  }
 
   public ResponseEntity<InputStreamResource> adhaCsvExport(Long iterationId) {
 
@@ -90,6 +97,6 @@ public class ExportService {
                     },
                     Comparator.nullsLast(Integer::compareTo))
                 .thenComparing(Ticket::getTitle, Comparator.nullsLast(String::compareTo)))
-        .collect(Collectors.toList());
+        .toList();
   }
 }
